Refine event UX, modal content, dates, and mobile UI polish

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;700;800&family=Space+Grotesk:wght@300;500;700&family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
+      :root {
+        --ui-accent: #d946ef;
+        --ui-radius-lg: 1rem;
+        --ui-radius-xl: 1.5rem;
+        --ui-card-shadow: 0 24px 50px rgba(2, 6, 23, 0.45);
+      }
+
       body {
         font-family: 'Plus Jakarta Sans', sans-serif;
         background-color: #020617;
@@ -83,7 +90,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div class="bg-festive">
